# btor2tools.rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs
tests/: parser.rs
