[package]
name = "btor2tools"
version = "0.1.0"
authors = ["Christian Mösl <christian.moesl@live.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btor2tools-sys = { git = "https://github.com/ChristianMoesl/btor2tools-sys", branch = "main" }
